--- a/SourceCode/app/src/main/res/layout/activity_reg_info_one.xml
+++ b/SourceCode/app/src/main/res/layout/activity_reg_info_one.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F1F3F1"
+    android:background="#D3A454"
     android:backgroundTint="#4FAA52"
     tools:context=".Authentication.RegInfoOneActivity">
 
