--- a/SourceCode/app/src/main/res/layout/activity_reg_info_one.xml
+++ b/SourceCode/app/src/main/res/layout/activity_reg_info_one.xml
@@ -8,6 +8,18 @@
     android:backgroundTint="#4FAA52"
     tools:context=".Authentication.RegInfoOneActivity">
 
+    <ImageView
+        android:id="@+id/imageView8"
+        android:layout_width="173dp"
+        android:layout_height="134dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.445"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.072"
+        app:srcCompat="@drawable/dev_image" />
+
     <TextView
         android:id="@+id/regOne_weightInfo"
         android:layout_width="39dp"
